first working version

--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,11 @@
 {
-  "compilerOptions": {
-    "lib": ["deno.ns", "dom"]
-  },
-  "tasks": {
-    "start": "deno run --allow-net --allow-read --allow-env steamClient.ts"
+    "importMap": "./import_map.json",
+    "tasks": {
+      "start": "deno run --allow-net --allow-sys --allow-write --allow-read --allow-env app.ts"
+    },
+    "compilerOptions": {
+      "lib": ["esnext"],
+      "types": []
+    }
   }
-}
+  
