--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-ACCOUNT_NAME=your_steam_account
-PASSWORD=your_steam_password
-CACHE_TYPE=redis
-REDIS_HOST=localhost
-REDIS_PORT=6379
+# .env
+PORT=8000
+# Leave REDIS_HOST and REDIS_PORT unset or empty to disable caching
+# REDIS_HOST=
+# REDIS_PORT=
+# REDIS_PASSWORD=your_redis_password  # If no password, leave it blank
 CACHE_EXPIRATION=3600
-DETA_PROJECT_KEY=your_deta_project_key
-DETA_BASE_NAME=your_deta_base_name
+LOG_LEVEL=INFO
