--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,12 +24,12 @@ jobs:
       with:
         deno-version: v1.x
 
-    # Get the latest tag
+    # Get the latest tag or set default
     - name: Get Latest Tag
       id: get_latest_tag
       run: |
         git fetch --tags
-        TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
+        TAG=$(git describe --tags `git rev-list --tags --max-count=1` || echo "v0.0.0")
         echo "Latest tag: $TAG"
         echo "::set-output name=LATEST_TAG::$TAG"
 
